some updates and moves

--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -1,5 +1,4 @@
-% This file was created with JabRef 2.10.
-% Encoding: ISO8859_1
+% Encoding: ISO-8859-1
 
 
 @Article{achard_xml_2001,
@@ -143,7 +142,7 @@ Software},
 
 @Article{george_development_2016,
   Title                    = {Development of multiplex {PCR} systems for expression profiling of human cardiomyocytes induced to proliferate by lentivirus transduction of upcyte genes},
-  Author                   = {George, Sandra and Rödiger, Stefan and Schröder, Christian and Knaut, Michael and Küpper, Jan-Heiner},
+  Author                   = {George, Sandra and R\"{o}diger, Stefan and Schr\"{o}der, Christian and Knaut, Michael and K\"{u}pper, Jan-Heiner},
   Journal                  = {Journal of Cellular Biotechnology},
   Year                     = {2016},
 
@@ -286,7 +285,7 @@ Supplementary Information: Supplementary data are available at Bioinformatics on
 
 @Article{lefever_rdml_2009,
   Title                    = {{RDML}: structured language and reporting guidelines for real-time quantitative {PCR} data},
-  Author                   = {Lefever, Steve and Hellemans, Jan and Pattyn, Filip and Przybylski, Daniel R. and Taylor, Chris and Geurts, René and Untergasser, Andreas and Vandesompele, Jo},
+  Author                   = {Lefever, Steve and Hellemans, Jan and Pattyn, Filip and Przybylski, Daniel R. and Taylor, Chris and Geurts, Ren\'{e} and Untergasser, Andreas and Vandesompele, Jo},
   Journal                  = {Nucleic Acids Research},
   Year                     = {2009},
   Number                   = {7},
@@ -735,3 +734,88 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Urldate                  = {2014-09-11}
 }
 
+
+@article{spiess_system-specific_2016,
+	title = {System-specific periodicity in quantitative real-time polymerase chain reaction data questions threshold-based quantitation},
+	volume = {6},
+	issn = {2045-2322},
+	url = {http://www.nature.com/articles/srep38951},
+	doi = {10.1038/srep38951},
+	urldate = {2016-12-14},
+	journal = {Scientific Reports},
+	author = {Spiess, Andrej-Nikolai and R\"{o}diger, Stefan and Burdukiewicz, Micha\l{} and Volksdorf, Thomas and Tellinghuisen, Joel},
+	month = dec,
+	year = {2016},
+	pages = {38951}
+}
+
+@Article{dvinge_htqpcr:_2009,
+  Title                    = {{HTqPCR}: high-throughput analysis and visualization of quantitative real-time {PCR} data in {R}},
+  Author                   = {Dvinge, Heidi and Bertone, Paul},
+  Journal                  = {Bioinformatics},
+  Year                     = {2009},
+  
+  Month                    = dec,
+  Number                   = {24},
+  Pages                    = {3325--3326},
+  Volume                   = {25},
+  
+  Abstract                 = {Motivation: Quantitative real-time polymerase chain reaction (qPCR) is routinely used for RNA expression profiling, validation of microarray hybridization data and clinical diagnostic assays. Although numerous statistical tools are available in the public domain for the analysis of microarray experiments, this is not the case for qPCR. Proprietary software is typically provided by instrument manufacturers, but these solutions are not amenable to the tandem analysis of multiple assays. This is problematic when an experiment involves more than a simple comparison between a control and treatment sample, or when many qPCR datasets are to be analyzed in a high-throughput facility.
+    Results: We have developed HTqPCR, a package for the R statistical computing environment, to enable the processing and analysis of qPCR data across multiple conditions and replicates.
+    Availability: HTqPCR and user documentation can be obtained through Bioconductor or at http://www.ebi.ac.uk/bertone/software.
+    Contact: bertone\{at\}ebi.ac.uk},
+  Doi                      = {10.1093/bioinformatics/btp578},
+  ISSN                     = {1367-4803, 1460-2059},
+  Language                 = {en},
+  Pmid                     = {19808880},
+  Shorttitle               = {{HTqPCR}},
+  Url                      = {http://bioinformatics.oxfordjournals.org/content/25/24/3325},
+  Urldate                  = {2017-01-03}
+}
+
+
+@Article{mccall_non-detects_2014,
+  Title                    = {On non-detects in {qPCR} data},
+  Author                   = {McCall, Matthew N. and McMurray, Helene R. and Land, Hartmut and Almudevar, Anthony},
+  Journal                  = {Bioinformatics},
+  Year                     = {2014},
+  
+  Month                    = aug,
+  Number                   = {16},
+  Pages                    = {2310--2316},
+  Volume                   = {30},
+  
+  Abstract                 = {Motivation: Quantitative real-time PCR (qPCR) is one of the most widely used methods to measure gene expression. Despite extensive research in qPCR laboratory protocols, normalization and statistical analysis, little attention has been given to qPCR non-detects—those reactions failing to produce a minimum amount of signal., Results: We show that the common methods of handling qPCR non-detects lead to biased inference. Furthermore, we show that non-detects do not represent data missing completely at random and likely represent missing data occurring not at random. We propose a model of the missing data mechanism and develop a method to directly model non-detects as missing data. Finally, we show that our approach results in a sizeable reduction in bias when estimating both absolute and differential gene expression., Availability and implementation: The proposed algorithm is implemented in the R package, nondetects. This package also contains the raw data for the three example datasets used in this manuscript. The package is freely available at http://mnmccall.com/software and as part of the Bioconductor project., Contact:
+    mccallm@gmail.com},
+  Doi                      = {10.1093/bioinformatics/btu239},
+  ISSN                     = {1367-4803},
+  Pmcid                    = {PMC4133581},
+  Pmid                     = {24764462},
+  Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4133581/},
+  Urldate                  = {2016-09-28}
+}
+
+@Article{perkins_readqpcr_2012,
+  Title                    = {{ReadqPCR} and {NormqPCR}: {R} packages for the reading, quality checking and normalisation of {RT}-{qPCR} quantification cycle ({Cq}) data},
+  Author                   = {Perkins, James R. and Dawes, John M. and McMahon, Steve B. and Bennett, David LH and Orengo, Christine and Kohl, Matthias},
+  Journal                  = {BMC Genomics},
+  Year                     = {2012},
+  
+  Month                    = jul,
+  Number                   = {1},
+  Pages                    = {296},
+  Volume                   = {13},
+  
+  Abstract                 = {Measuring gene transcription using real-time reverse transcription polymerase chain reaction (RT-qPCR) technology is a mainstay of molecular biology. Technologies now exist to measure the abundance of many transcripts in parallel. The selection of the optimal reference gene for the normalisation of this data is a recurring problem, and several algorithms have been developed in order to solve it. So far nothing in R exists to unite these methods, together with other functions to read in and normalise the data using the chosen reference gene(s).
+    PMID: 22748112},
+  Copyright                = {2012 Perkins et al.; licensee BioMed Central Ltd.},
+  Doi                      = {10.1186/1471-2164-13-296},
+  ISSN                     = {1471-2164},
+  Language                 = {en},
+  Pmid                     = {22748112},
+  Shorttitle               = {{ReadqPCR} and {NormqPCR}},
+  Url                      = {http://www.biomedcentral.com/1471-2164/13/296/abstract},
+  Urldate                  = {2014-04-27}
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
