--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Changes from Version 0.9-5 to 0.9-6 [April 24 2017]
+* many bugs removed
+* CRAN version
+
 Changes from Version 0.9-4 to 0.9-5 [December 08 2016]
 * CRAN version
 
