rdml.bib update

--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -279,7 +279,6 @@ Supplementary Information: Supplementary data are available at Bioinformatics on
   Number                   = { 1 },
   Pages                    = { 151--158 },
   Volume                   = { 6 },
-
   Url                      = { https://journal.r-project.org/archive/2014-1/leeper.pdf}
 }
 
@@ -315,9 +314,7 @@ Supplementary Information: Supplementary data are available at Bioinformatics on
 
   Abstract                 = {Whereas genomic data are universally machine-readable, data from imaging, multiplex biochemistry, flow cytometry and other cell- and tissue-based assays usually reside in loosely organized files of poorly documented provenance. This arises because the relational databases used in genomic research are difficult to adapt to rapidly evolving experimental designs, data formats and analytic algorithms. Here we describe an adaptive approach to managing experimental data based on semantically typed data hypercubes (SDCubes) that combine hierarchical data format 5 (HDF5) and extensible markup language (XML) file types. We demonstrate the application of SDCube-based storage using ImageRail, a software package for high-throughput microscopy. Experimental design and its day-to-day evolution, not rigid standards, determine how ImageRail data are organized in SDCubes. We applied ImageRail to collect and analyze drug dose-response landscapes in human cell lines at single-cell resolution.},
   Copyright                = {© 2011 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
-  Doi                      = {10.1038/nmeth.1600},
-  ISSN                     = {1548-7091},
-  Url                      = {http://www.nature.com/nmeth/journal/v8/n6/full/nmeth.1600.html}
+  ISSN                     = {1548-7091}
 }
 
 @Book{xml_book,
