--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -815,4 +815,24 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Urldate                  = {2014-04-27}
 }
 
+@article{guescini_new_2008,
+	title = {A new real-time {PCR} method to overcome significant quantitative inaccuracy due to slight amplification inhibition},
+	volume = {9},
+	copyright = {2008 Guescini et al; licensee BioMed Central Ltd.},
+	issn = {1471-2105},
+	url = {http://www.biomedcentral.com/1471-2105/9/326/abstract},
+	doi = {10.1186/1471-2105-9-326},
+	abstract = {Real-time PCR analysis is a sensitive DNA quantification technique that has recently gained considerable attention in biotechnology, microbiology and molecular diagnostics. Although, the cycle-threshold (Ct) method is the present "gold standard", it is far from being a standard assay. Uniform reaction efficiency among samples is the most important assumption of this method. Nevertheless, some authors have reported that it may not be correct and a slight PCR efficiency decrease of about 4\% could result in an error of up to 400\% using the Ct method. This reaction efficiency decrease may be caused by inhibiting agents used during nucleic acid extraction or copurified from the biological sample.
+PMID: 18667053},
+	language = {en},
+	number = {1},
+	urldate = {2014-04-27},
+	journal = {BMC Bioinformatics},
+	author = {Guescini, Michele and Sisti, Davide and Rocchi, Marco BL and Stocchi, Laura and Stocchi, Vilberto},
+	month = jul,
+	year = {2008},
+	pmid = {18667053},
+	pages = {326}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
